fix: theming background colours issues with transparency

--- a/src/app.css
+++ b/src/app.css
@@ -39,6 +39,8 @@
   --sidebar-accent-foreground: oklch(0.21 0.006 285.885);
   --sidebar-border: oklch(0.92 0.004 286.32);
   --sidebar-ring: oklch(0.705 0.015 286.067);
+
+  --background-color: white;
 }
 
 .dark {
@@ -73,6 +75,8 @@
   --sidebar-accent-foreground: oklch(0.985 0 0);
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.552 0.016 285.938);
+
+  --background-color: var(--color-zinc-950);
 }
 
 @theme inline {
@@ -313,7 +317,6 @@ body {
 }
 
 body > div {
-  @apply bg-white dark:bg-zinc-950;
   background: var(--background-color);
 }
 
