feat: visual improvements to directory page

--- a/src/app.css
+++ b/src/app.css
@@ -323,3 +323,7 @@ body > div {
 button {
   cursor: pointer;
 }
+
+[data-bits-floating-content-wrapper] {
+  background: transparent !important;
+}
