--- a/static/app.css
+++ b/static/app.css
@@ -50,6 +50,6 @@
   ::before,
   ::backdrop,
   ::file-selector-button {
-    border-color: var(--color-gray-200, currentcolor);
+    border-color: var(--color-zinc-200, currentcolor);
   }
 } 
